Last update, adding notes and make full description.

--- a/Air_pollution_quality_prediction.ipynb
+++ b/Air_pollution_quality_prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1oNUdwqT2b9GlXWaP1m7pXOX7tcCozjra",
-      "authorship_tag": "ABX9TyM+AljdQxzJT0pG40QAz4Iv",
+      "authorship_tag": "ABX9TyO5aEd8xRkedstPcUivsTe7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +30,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Air-pollution Quality Prediction**\n",
+        "**Air Quality Prediction and Classification Using Machine Learning**\n",
         "<br>`Our Scobe`: <br>\n",
-        "In this project we are going to built an air-pollution quality model to classify whether the air we breath is normal, abnormal, dangrous...\n"
+        "In this project we are going to built an air quality prediction model to classify whether the air we breath is `Normal`, `Moderate`, `Abnormal` or `Dangrous` Based on Specific Criteria gathered from different resources. To check them out, you can click to the above links. <br>\n",
+        "https://iris.who.int/bitstream/handle/10665/345329/9789240034228-eng.pdf <br> https://www.epa.gov/criteria-air-pollutants/naaqs-table <br>\n",
+        "https://ww2.arb.ca.gov/resources/national-ambient-air-quality-standards.<br> In addition, the project is going to follow machine learning Pipeline such as.\n",
+        "* Preprocessing\n",
+        "* Data Cleaning\n",
+        "* Feature Engineering\n",
+        "* Model Selection\n",
+        "* Model Training\n",
+        "* Model Evaluation\n"
       ],
       "metadata": {
         "id": "fTAzMkGd8RYK"
@@ -65,6 +73,18 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Preprocessing Step:**\n",
+        "This step contains:\n",
+        "* Information about dataset.\n",
+        "* Check for Null and Infinity values."
+      ],
+      "metadata": {
+        "id": "OnquxHPoljaF"
+      }
     },
     {
       "cell_type": "code",
@@ -616,6 +636,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# First five data\n",
         "data.head(5)"
       ],
       "metadata": {
@@ -1020,6 +1041,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Dataset Columns\n",
         "data.columns"
       ],
       "metadata": {
@@ -1049,6 +1071,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Dataset information such as Feature's name, total count and types\n",
         "data.info()"
       ],
       "metadata": {
@@ -1095,6 +1118,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Check for unusual Feature\n",
         "data['Unnamed: 15']"
       ],
       "metadata": {
@@ -1205,6 +1229,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Strange Feature\n",
         "data['Unnamed: 16']"
       ],
       "metadata": {
@@ -1315,6 +1340,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Check for total null values in the feature\n",
         "np.array(data['Unnamed: 15'].isna().sum())"
       ],
       "metadata": {
@@ -1341,6 +1367,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Check for total null values in the feature\n",
         "np.array(data['Unnamed: 16'].isna().sum())"
       ],
       "metadata": {
@@ -1363,6 +1390,19 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Data Cleaning Step:** <br>\n",
+        "This step contains:\n",
+        "* Drop Unrelated Features\n",
+        "* Drop Null values\n",
+        "* Convert Object type to Numerical type"
+      ],
+      "metadata": {
+        "id": "tegC-nj9nlqf"
+      }
     },
     {
       "cell_type": "code",
@@ -1875,7 +1915,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# checking for null values inside every feature:\n",
+        "# checking for total null values inside every feature:\n",
         "def null_check(dataset):\n",
         "  total_null = {}\n",
         "  for feature in dataset.columns:\n",
@@ -1923,7 +1963,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check every null values in each feature is the same?\n",
+        "# Check if every null values in each features are in the same index?\n",
         "data[data['Time'].isna()]"
       ],
       "metadata": {
@@ -2419,7 +2459,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# check as boolean for every feature\n",
+        "# Check if every null values in each features are in the same index as Vertical?\n",
         "data[data['Time'].isna()].all()"
       ],
       "metadata": {
@@ -2580,6 +2620,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# dataset information\n",
         "data.info()"
       ],
       "metadata": {
@@ -4405,7 +4446,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Feature Engineering**"
+        "**Feature Engineering Step:** <br>\n",
+        "This step includes:\n",
+        "* Adding Label feature\n",
+        "* Data Imputation"
       ],
       "metadata": {
         "id": "pEdotF3jGK0C"
@@ -4456,7 +4500,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# adding label feature based on threshold\n",
+        "# adding label feature based on threshold or metrics\n",
         "def metric_classify(row, threshold):\n",
         "  for key, val in threshold.items():\n",
         "    if key in row:\n",
@@ -5113,8 +5157,8 @@
       "cell_type": "markdown",
       "source": [
         "**Imbalace Dataset**<br>\n",
-        "We have faced with an imbalace dataset such that we can use blanace it using `amblearn` method and data `augmentation`.<br>\n",
-        "Because of lack of data as much with our dataset, we are going to use `amblearn` method for balancing the dataset."
+        "We have faced with an imbalace dataset and requires to be balanced.<br> We can balance it using `data augmentation` method.\n",
+        "Imblearn is used to balance the dataset."
       ],
       "metadata": {
         "id": "QcGg58YX01Om"
@@ -5253,16 +5297,16 @@
         "    # Initialize the OneHotEncoder\n",
         "    encoder = OneHotEncoder(sparse_output=False)\n",
         "\n",
-        "    # Extract the 'ProtocolName' column and reshape it to 2D array\n",
+        "    # Extract the 'Label' column and reshape it to 2D array\n",
         "    protocol_name_column = dataset[['Label']]\n",
         "\n",
-        "    # Fit and transform the 'ProtocolName' column\n",
+        "    # Fit and transform the 'Label' column\n",
         "    one_hot_encoded = encoder.fit_transform(protocol_name_column)\n",
         "\n",
         "    # Convert the one-hot encoded array into a DataFrame\n",
         "    one_hot_encoded_df = pd.DataFrame(one_hot_encoded, columns=encoder.get_feature_names_out(['Label']))\n",
         "\n",
-        "    # Drop the original ProtocolName column\n",
+        "    # Drop the original Label column\n",
         "    dataset.drop('Label', axis=1, inplace=True)\n",
         "\n",
         "    # Concatenate the original dataset with the one-hot encoded DataFrame\n",
@@ -5847,7 +5891,7 @@
         "  correlation = data.corr()\n",
         "\n",
         "  # Create a heatmap using seaborn\n",
-        "  plt.figure(figsize=(10, 8))  # Adjust figure size for better visibility\n",
+        "  plt.figure(figsize=(10, 8))  # figure size\n",
         "  sns.heatmap(correlation, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
         "  plt.title(\"Feature Correlation Heatmap\")\n",
         "  plt.show()\n",
@@ -5879,14 +5923,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Data Splition Step:** <br>\n",
+        "This step include:\n",
+        "* Spliting the dataset into train and test"
+      ],
+      "metadata": {
+        "id": "XzOhzFRFtHWO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
-        "# Spliting dataset into train and test:\n",
+        "# Spliting dataset into train and test using train_test_split:\n",
         "\n",
-        "# Assuming your features are in `X` and target labels are in `y`\n",
+        "# `X` as features and target labels is `y`\n",
         "X = data.drop(columns=['Label_Normal', 'Label_Abnormal', 'Label_Moderate', 'Label_Dangerous'])  # independet features\n",
-        "y = data[['Label_Normal', 'Label_Abnormal', 'Label_Moderate', 'Label_Dangerous']]  # dependent labels\n",
+        "y = data[['Label_Normal', 'Label_Abnormal', 'Label_Moderate', 'Label_Dangerous']]  # dependent feature\n",
         "\n",
         "# Split the dataset into training (80%) and testing (20%) sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -5912,6 +5967,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Model Selection Step:** <br>\n",
+        "This step contains:\n",
+        "* Training and evaluating three different models:\n",
+        "  * KNN (K-Nearest Neighbor)\n",
+        "  * RF (RandomForestClassifier)\n",
+        "  * NB (Naive Bayes)"
+      ],
+      "metadata": {
+        "id": "bN5gygkhuvrg"
+      }
     },
     {
       "cell_type": "code",
@@ -5971,47 +6040,34 @@
         "        plt.show()\n",
         "\n",
         "        # AUC (Only for binary classification or multiclass with OneVsRest)\n",
-        "        if len(model.classes_) == 2:  # For binary classification\n",
-        "          fpr, tpr, thresholds = roc_curve(y_test_labels, model.predict_proba(X_test)[:, 1])\n",
-        "          auc_score = roc_auc_score(y_test_labels, model.predict_proba(X_test)[:, 1])\n",
-        "          print(f\"AUC (Area Under Curve) for {model_name}: {auc_score:.4f}\")\n",
-        "          plt.figure()\n",
-        "          plt.plot(fpr, tpr, color='blue', label=f'AUC = {auc_score:.4f}')\n",
-        "          plt.plot([0, 1], [0, 1], color='red', linestyle='--')  # Diagonal line\n",
-        "          plt.title(f\"ROC Curve - {model_name}\")\n",
-        "          plt.xlabel('False Positive Rate')\n",
-        "          plt.ylabel('True Positive Rate')\n",
-        "          plt.legend(loc='best')\n",
-        "          plt.show()\n",
-        "        else:  # For multiclass classification\n",
-        "            print(f\"AUC (One-vs-Rest) for {model_name}:\")\n",
-        "            # Binarize the output labels for multiclass\n",
-        "            lb = LabelBinarizer()\n",
-        "            y_bin = lb.fit_transform(y_test_labels)\n",
-        "            y_pred_proba = model.predict_proba(X_test)  # Predicted probabilities\n",
+        "        print(f\"AUC (One-vs-Rest) for {model_name}:\")\n",
+        "        # Binarize the output labels for multiclass\n",
+        "        lb = LabelBinarizer()\n",
+        "        y_bin = lb.fit_transform(y_test_labels)\n",
+        "        y_pred_proba = model.predict_proba(X_test)  # Predicted probabilities\n",
         "\n",
-        "            # Compute ROC curve and AUC for each class\n",
-        "            fpr = {}\n",
-        "            tpr = {}\n",
-        "            roc_auc = {}\n",
-        "            for i in range(len(model.classes_)):\n",
-        "                fpr[i], tpr[i], _ = roc_curve(y_bin[:, i], y_pred_proba[:, i])\n",
-        "                roc_auc[i] = auc(fpr[i], tpr[i])\n",
+        "        # Compute ROC curve and AUC for each class\n",
+        "        fpr = {}\n",
+        "        tpr = {}\n",
+        "        roc_auc = {}\n",
+        "        for i in range(len(model.classes_)):\n",
+        "            fpr[i], tpr[i], _ = roc_curve(y_bin[:, i], y_pred_proba[:, i])\n",
+        "            roc_auc[i] = auc(fpr[i], tpr[i])\n",
         "\n",
-        "            # Plot all ROC curves\n",
-        "            plt.figure()\n",
-        "            for i, class_name in enumerate(model.classes_):\n",
-        "                plt.plot(fpr[i], tpr[i], lw=2, label=f'Class {class_name} (AUC = {roc_auc[i]:.4f})')\n",
+        "        # Plot all ROC curves\n",
+        "        plt.figure()\n",
+        "        for i, class_name in enumerate(model.classes_):\n",
+        "            plt.plot(fpr[i], tpr[i], lw=2, label=f'Class {class_name} (AUC = {roc_auc[i]:.4f})')\n",
         "\n",
-        "            # Add macro-average AUC\n",
-        "            macro_auc = roc_auc_score(y_bin, y_pred_proba, average='macro', multi_class='ovr')\n",
-        "            print(f\"Macro-Average AUC: {macro_auc:.4f}\")\n",
-        "            plt.plot([0, 1], [0, 1], 'k--', lw=2)  # Diagonal line\n",
-        "            plt.title(f\"ROC Curve - {model_name} (Multiclass)\")\n",
-        "            plt.xlabel('False Positive Rate')\n",
-        "            plt.ylabel('True Positive Rate')\n",
-        "            plt.legend(loc='best')\n",
-        "            plt.show()\n",
+        "        # Add macro-average AUC\n",
+        "        macro_auc = roc_auc_score(y_bin, y_pred_proba, average='macro', multi_class='ovr')\n",
+        "        print(f\"Macro-Average AUC: {macro_auc:.4f}\")\n",
+        "        plt.plot([0, 1], [0, 1], 'k--', lw=2)  # Diagonal line\n",
+        "        plt.title(f\"ROC Curve - {model_name} (Multiclass)\")\n",
+        "        plt.xlabel('False Positive Rate')\n",
+        "        plt.ylabel('True Positive Rate')\n",
+        "        plt.legend(loc='best')\n",
+        "        plt.show()\n",
         "        print(\"-\" * 80)  # Print separator for clarity\n",
         "\n",
         "# Call the function with your data\n",
@@ -6188,8 +6244,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Prefered and Selected Model:**<br>\n",
-        "Our prefered Model is RandomForestClassifier such that it has great accuracy and evaluation metrics showes great result as well. <br>\n",
+        "**Retrain Prefered Model using CV:**<br>\n",
+        "Our prefered Model is RandomForestClassifier such that it has great accuracy and its evaluation metrics are great as well. <br>\n",
         "In addition to this, We prefere to Check our model using `Cross Validation` & `Explainable AI` methods to make sure everything goes well."
       ],
       "metadata": {
@@ -6501,6 +6557,33 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
+        "id": "05fH-zccsPN5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Q8fzJUa8sPH_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4P_1yVAFsPEk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
         "id": "-I65f8bgcTeb"
       },
       "execution_count": null,
@@ -6572,7 +6655,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Draft**"
+        "**Draft**<br>\n",
+        "The first model Traiend and evaluated to find the issue related to the dataset."
       ],
       "metadata": {
         "id": "zhrA3T_YObb1"
