latest updated notebook. now the notebook is full described.

--- a/Air_pollution_quality_prediction.ipynb
+++ b/Air_pollution_quality_prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1oNUdwqT2b9GlXWaP1m7pXOX7tcCozjra",
-      "authorship_tag": "ABX9TyO5aEd8xRkedstPcUivsTe7",
+      "authorship_tag": "ABX9TyMyVUufQrOeY+PCmmvylVn9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,11 @@
         "<br>`Our Scobe`: <br>\n",
         "In this project we are going to built an air quality prediction model to classify whether the air we breath is `Normal`, `Moderate`, `Abnormal` or `Dangrous` Based on Specific Criteria gathered from different resources. To check them out, you can click to the above links. <br>\n",
         "https://iris.who.int/bitstream/handle/10665/345329/9789240034228-eng.pdf <br> https://www.epa.gov/criteria-air-pollutants/naaqs-table <br>\n",
-        "https://ww2.arb.ca.gov/resources/national-ambient-air-quality-standards.<br> In addition, the project is going to follow machine learning Pipeline such as.\n",
+        "https://ww2.arb.ca.gov/resources/national-ambient-air-quality-standards.\n",
+        "This dataset contains the responses of a gas multisensor device deployed on the field in an Italian city. Hourly responses averages are recorded along with gas concentrations references from a certified analyzer.\n",
+        "for further description please check the link bellow. <br>\n",
+        "https://www.kaggle.com/datasets/fedesoriano/air-quality-data-set.\n",
+        "<br> In addition, the project is going to follow machine learning Pipeline such as.\n",
         "* Preprocessing\n",
         "* Data Cleaning\n",
         "* Feature Engineering\n",
@@ -5976,7 +5980,10 @@
         "* Training and evaluating three different models:\n",
         "  * KNN (K-Nearest Neighbor)\n",
         "  * RF (RandomForestClassifier)\n",
-        "  * NB (Naive Bayes)"
+        "  * NB (Naive Bayes) <br>\n",
+        "\n",
+        "For further description please check the link bellow: <br>\n",
+        "https://scikit-learn.org/stable/machine_learning_map.html"
       ],
       "metadata": {
         "id": "bN5gygkhuvrg"
